ms-user/src/main/java/com/example/msuser/error/ErrorCodes.java
package com.example.msuser.error;

public enum ErrorCodes {

    UNEXPECTED_ERROR,
    INVALID_PAYMENT_DATA,
    TRANSACTION_NOT_FOUND,
    CARD_NOT_FOUND,
    CARD_EXISTS,
    INSUFFICIENT_BALANCE,
    EXPIRED_CARD,
    PRODUCT_NOT_FOUND,
    PRODUCT_EXISTS,
    PRODUCT_HAS_EMPTY_STOCK,

    USER_ALREADY_EXISTS,
    USER_NOT_FOUND
}
